--- a/codepad/codepad.vcxproj.filters
+++ b/codepad/codepad.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="editors\code\codebox.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ui\draw.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
