--- a/codepad/codepad.vcxproj.filters
+++ b/codepad/codepad.vcxproj.filters
@@ -48,16 +48,7 @@
     <ClInclude Include="os\current.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="os\input.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="os\renderer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="os\window.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="os\windows.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="utilities\hotkey_registry.h">
@@ -96,15 +87,36 @@
     <ClInclude Include="utilities\globals.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="os\window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="os\windows\font.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="os\windows\misc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="os\windows\window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="os\windows\renderer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="os\windows.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="os\misc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="os\windows.cpp">
+    <ClCompile Include="utilities\globals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="utilities\globals.cpp">
+    <ClCompile Include="os\windows\windows.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
