--- a/codepad/codepad.vcxproj.filters
+++ b/codepad/codepad.vcxproj.filters
@@ -42,9 +42,6 @@
     <ClInclude Include="utilities\textconfig.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="ui\visual.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="os\current.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -106,6 +103,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="os\misc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ui\theme_providers.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
