--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,17 @@ project(codepad)
 
 set(CMAKE_CXX_STANDARD 14)
 
+if(MSVC)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
+elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wconversion -rdynamic -g")
+endif()
+
+find_package(Freetype REQUIRED)
+include_directories(${FREETYPE_INCLUDE_DIRS})
+find_package(OpenGL REQUIRED)
+include_directories(${OPENGL_INCLUDE_DIR})
+
 if(WIN32)
 	set(PLATFORM_SOURCE
 			codepad/os/windows/font.h
@@ -14,9 +25,17 @@ if(WIN32)
 	set(PLATFORM_DEFINITIONS -DCP_PLATFORM_WINDOWS)
 	set(PLATFORM_LIBRARIES d2d1 dwrite gdi32 windowscodecs)
 elseif(UNIX)
+	find_package(X11 REQUIRED)
+	include_directories(${X11_INCLUDE_DIR})
+	set(PLATFORM_SOURCE
+			codepad/os/linux/font.h
+			codepad/os/linux/misc.h
+			codepad/os/linux/window.h
+			codepad/os/linux/renderer.h
+			codepad/os/linux/linux.cpp
+			codepad/os/linux.h)
 	set(PLATFORM_DEFINITIONS -DCP_PLATFORM_UNIX)
-	# not supported right now
-	message(FATAL_ERROR "unix-like platform not yet supported")
+	set(PLATFORM_LIBRARIES ${X11_LIBRARIES} pthread fontconfig)
 else()
 	message(FATAL_ERROR "unrecognized platform")
 endif()
@@ -51,4 +70,4 @@ set(SOURCE_FILES
 		${PLATFORM_SOURCE})
 add_definitions(-DUNICODE -D_UNICODE -DCP_LOG_STACKTRACE ${PLATFORM_DEFINITIONS})
 add_executable(codepad ${SOURCE_FILES})
-target_link_libraries(codepad opengl32 freetype ${PLATFORM_LIBRARIES})
+target_link_libraries(codepad ${OPENGL_gl_LIBRARY} ${FREETYPE_LIBRARIES} ${PLATFORM_LIBRARIES})
