--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 14)
 if(MSVC)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W3")
 elseif(CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wconversion -rdynamic -g")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wconversion -g")
 endif()
 
 find_package(Freetype REQUIRED)
@@ -36,6 +36,7 @@ elseif(UNIX)
 			codepad/os/linux.h)
 	set(PLATFORM_DEFINITIONS -DCP_PLATFORM_UNIX)
 	set(PLATFORM_LIBRARIES ${X11_LIBRARIES} pthread fontconfig)
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -rdynamic")
 else()
 	message(FATAL_ERROR "unrecognized platform")
 endif()
